force-app/main/default/objects/Opportunity/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <description>Email address that this account is registered with - to be used for billing and plan purposes</description>
    <inlineHelpText>Email address that this account is registered with - to be used for billing and plan purposes</inlineHelpText>
    <label>Account Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>