force-app/main/default/objects/Opportunity/fields/Account_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Account_Workspace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Workspace</label>
    <referenceTo>Workspace__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>