force-app/main/default/objects/Opportunity/fields/Associated_people__c.field-meta.xml
<CustomField>
    <fullName>Associated_people__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person records associated with a Deal record</description>
    <inlineHelpText>Person records associated with a Deal record</inlineHelpText>
    <label>Associated people</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Associated people)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>