force-app/main/default/objects/Opportunity/fields/Blockers_to_sign_deal__c.field-meta.xml
<CustomField>
    <fullName>Blockers_to_sign_deal__c</fullName>
    <description>Features or requirements that are necessary to win the deal, but we don&apos;t have yet</description>
    <inlineHelpText>Features or requirements that are necessary to win the deal, but we don&apos;t have yet</inlineHelpText>
    <label>Blockers to sign deal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSML</fullName>
            </value>
            <value>
                <fullName>Output file naming</fullName>
            </value>
            <value>
                <fullName>Low Latency Streaming</fullName>
            </value>
            <value>
                <fullName>Audio Native</fullName>
            </value>
            <value>
                <fullName>Runtime generation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>csv batch upload</fullName>
            </value>
            <value>
                <fullName>Emotional controllability</fullName>
            </value>
            <value>
                <fullName>On-device rendering</fullName>
            </value>
            <value>
                <fullName>SOC2/ISO27001</fullName>
            </value>
            <value>
                <fullName>Volume controls</fullName>
            </value>
            <value>
                <fullName>Timecodes</fullName>
            </value>
            <value>
                <fullName>Annual Billing</fullName>
            </value>
            <value>
                <fullName>EU servers</fullName>
            </value>
            <value>
                <fullName>Pacing controls</fullName>
            </value>
            <value>
                <fullName>Non-verbal sounds</fullName>
            </value>
            <value>
                <fullName>CoBranding</fullName>
            </value>
            <value>
                <fullName>Projections</fullName>
            </value>
            <value>
                <fullName>Dictionary/pronunciation controls</fullName>
            </value>
            <value>
                <fullName>On-premises rendering</fullName>
            </value>
            <value>
                <fullName>New languages</fullName>
            </value>
            <value>
                <fullName>Speech-to-Speech</fullName>
            </value>
            <value>
                <fullName>Emphasis &amp; intonation control</fullName>
            </value>
            <value>
                <fullName>HIPAA Compliance</fullName>
            </value>
            <value>
                <fullName>User management</fullName>
            </value>
            <value>
                <fullName>Private language models</fullName>
            </value>
            <value>
                <fullName>Dubbing Studio</fullName>
            </value>
            <value>
                <fullName>SOC2 Type II</fullName>
            </value>
            <value>
                <fullName>Output format</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>