force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Your contact with power, influence and credibility to get a deal done</description>
    <inlineHelpText>Your contact with power, influence and credibility to get a deal done</inlineHelpText>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>