force-app/main/default/objects/Opportunity/fields/Churn_Category__c.field-meta.xml
<CustomField>
    <fullName>Churn_Category__c</fullName>
    <description>Structured churn reason categories automatically classified when &quot;Churn Reason&quot; is entered</description>
    <inlineHelpText>Structured churn reason categories automatically classified when &quot;Churn Reason&quot; is entered</inlineHelpText>
    <label>Churn Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Requirements</fullName>
            </value>
            <value>
                <fullName>Poor Voice Quality</fullName>
            </value>
            <value>
                <fullName>Low volume - Enterprise not needed</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>