force-app/main/default/objects/Opportunity/fields/Churn_Flag__c.field-meta.xml
<CustomField>
    <fullName>Churn_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags if customer churned in the middle of the deal</description>
    <inlineHelpText>Flags if customer churned in the middle of the deal</inlineHelpText>
    <label>Churn Flag</label>
    <type>Checkbox</type>
</CustomField>