force-app/main/default/objects/Opportunity/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <description>A brief description of why the customer churned.</description>
    <inlineHelpText>A brief description of why the customer churned.</inlineHelpText>
    <label>Churn Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>