force-app/main/default/objects/Opportunity/fields/Competitor_Flag__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Binary flag to note customer use cases that potentially compete directly with ElevenLabs products</description>
    <inlineHelpText>Binary flag to note customer use cases that potentially compete directly with ElevenLabs products</inlineHelpText>
    <label>Competitor Flag</label>
    <type>Checkbox</type>
</CustomField>