force-app/main/default/objects/Opportunity/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <description>Who are we competing against for this deal?</description>
    <inlineHelpText>Who are we competing against for this deal?</inlineHelpText>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>non</fullName>
            </value>
            <value>
                <fullName>Reedz Speaker</fullName>
            </value>
            <value>
                <fullName>Rask AI</fullName>
            </value>
            <value>
                <fullName>Google TTS</fullName>
            </value>
            <value>
                <fullName>HeyGen</fullName>
            </value>
            <value>
                <fullName>Synthesia</fullName>
            </value>
            <value>
                <fullName>In-house TTS</fullName>
            </value>
            <value>
                <fullName>Tortoise TTS</fullName>
            </value>
            <value>
                <fullName>Respeecher</fullName>
            </value>
            <value>
                <fullName>Play.ht</fullName>
            </value>
            <value>
                <fullName>ElevenLabs</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Deepgram</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Descript</fullName>
            </value>
            <value>
                <fullName>Sonantic</fullName>
            </value>
            <value>
                <fullName>WellSaid Labs</fullName>
            </value>
            <value>
                <fullName>Murf AI</fullName>
            </value>
            <value>
                <fullName>Microsoft Azure</fullName>
            </value>
            <value>
                <fullName>ResembleAI</fullName>
            </value>
            <value>
                <fullName>Amazon Polly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>