force-app/main/default/objects/Opportunity/fields/Concurrency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Concurrency_Rate__c</fullName>
    <description>Number of concurrent requests on plan</description>
    <inlineHelpText>Number of concurrent requests on plan</inlineHelpText>
    <label>Concurrency Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>