force-app/main/default/objects/Opportunity/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <label>Contract Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>