force-app/main/default/objects/Opportunity/fields/Deal_Close_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Deal_Close_Timestamp__c</fullName>
    <description>When the deal was signed</description>
    <inlineHelpText>When the deal was signed</inlineHelpText>
    <label>Deal Close Timestamp</label>
    <type>DateTime</type>
</CustomField>