force-app/main/default/objects/Opportunity/fields/Deal_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deal_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact for this opportunity</description>
    <inlineHelpText>Primary contact for this opportunity</inlineHelpText>
    <label>Deal Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Deal Point of Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>