force-app/main/default/objects/Opportunity/fields/Deal_value__c.field-meta.xml
<CustomField>
    <fullName>Deal_value__c</fullName>
    <label>Deal value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>