force-app/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>How they will make their decision</description>
    <inlineHelpText>How they will make their decision</inlineHelpText>
    <label>Decision Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>