force-app/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>Steps they will take to make their decision</description>
    <inlineHelpText>Steps they will take to make their decision</inlineHelpText>
    <label>Decision Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>