force-app/main/default/objects/Opportunity/fields/Discount_threshold__c.field-meta.xml
<CustomField>
    <fullName>Discount_threshold__c</fullName>
    <formula>$CustomMetadata.Eleven_Labs_Value__mdt.Oppty_Discount_Percentage.Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>