force-app/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <description>The person&apos;s name that has budget authority</description>
    <inlineHelpText>The person&apos;s name that has budget authority</inlineHelpText>
    <label>Economic Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>