force-app/main/default/objects/Opportunity/fields/Email_for_Billing_API__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Billing_API__c</fullName>
    <label>Email for Billing API</label>
    <type>Email</type>
</CustomField>