force-app/main/default/objects/Opportunity/fields/Estimated_Monthly_Usage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Usage__c</fullName>
    <description>Estimated monthly usage as input in the contact sales form</description>
    <inlineHelpText>Estimated monthly usage as input in the contact sales form</inlineHelpText>
    <label>Estimated Monthly Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>