force-app/main/default/objects/Opportunity/fields/Expected_Deal_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Deal_Close_Date__c</fullName>
    <description>Date when we expect to close the deal</description>
    <inlineHelpText>Date when we expect to close the deal</inlineHelpText>
    <label>Expected Deal Close Date</label>
    <type>Date</type>
</CustomField>