force-app/main/default/objects/Opportunity/fields/External_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>