force-app/main/default/objects/Opportunity/fields/First_Contact_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Timestamp__c</fullName>
    <description>The first interaction or reply to this lead</description>
    <inlineHelpText>The first interaction or reply to this lead</inlineHelpText>
    <label>First Contact Timestamp</label>
    <type>DateTime</type>
</CustomField>