force-app/main/default/objects/Opportunity/fields/First_Meeting_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Timestamp__c</fullName>
    <description>When the first meeting with AE occurred regarding this deal.</description>
    <inlineHelpText>When the first meeting with AE occurred regarding this deal.</inlineHelpText>
    <label>First Meeting Timestamp</label>
    <type>DateTime</type>
</CustomField>