force-app/main/default/objects/Opportunity/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <description>Negative consequences of doing nothing</description>
    <inlineHelpText>Negative consequences of doing nothing</inlineHelpText>
    <label>Identify Pain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>