force-app/main/default/objects/Opportunity/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <description>Languages required for this application</description>
    <inlineHelpText>Languages required for this application</inlineHelpText>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Croatian</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
            <value>
                <fullName>Latvian</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Yoruba</fullName>
            </value>
            <value>
                <fullName>Ukranian</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Slovenian</fullName>
            </value>
            <value>
                <fullName>Hebrew</fullName>
            </value>
            <value>
                <fullName>Estonian</fullName>
            </value>
            <value>
                <fullName>Macedonian</fullName>
            </value>
            <value>
                <fullName>Swahili</fullName>
            </value>
            <value>
                <fullName>Urdu</fullName>
            </value>
            <value>
                <fullName>Catalan</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Oromo</fullName>
            </value>
            <value>
                <fullName>Indonesian</fullName>
            </value>
            <value>
                <fullName>Hausa</fullName>
            </value>
            <value>
                <fullName>IGBO</fullName>
            </value>
            <value>
                <fullName>Malay</fullName>
            </value>
            <value>
                <fullName>Slovak</fullName>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>Norwegian</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Portuguese - Portugal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>