force-app/main/default/objects/Opportunity/fields/Latest_Meeting_Summary__c.field-meta.xml
<CustomField>
    <fullName>Latest_Meeting_Summary__c</fullName>
    <description>AI generated summary from the last live meeting on this deal</description>
    <inlineHelpText>AI generated summary from the last live meeting on this deal</inlineHelpText>
    <label>Latest Meeting Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>