force-app/main/default/objects/Opportunity/fields/Latest_Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quoted_Price__c</fullName>
    <description>Pricing quoted per 1M characters</description>
    <inlineHelpText>Pricing quoted per 1M characters</inlineHelpText>
    <label>Latest Quoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>