force-app/main/default/objects/Opportunity/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <description>Current status of MSA negotiation</description>
    <inlineHelpText>Current status of MSA negotiation</inlineHelpText>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSA shared</fullName>
            </value>
            <value>
                <fullName>1st redlines received</fullName>
            </value>
            <value>
                <fullName>1st redlines returned</fullName>
            </value>
            <value>
                <fullName>2nd redlines received</fullName>
            </value>
            <value>
                <fullName>2nd redlines returned</fullName>
            </value>
            <value>
                <fullName>legal agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>