force-app/main/default/objects/Opportunity/fields/Link_to_Asana_Legal_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Asana_Legal_Ticket__c</fullName>
    <label>Link to Asana Legal Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>