force-app/main/default/objects/Opportunity/fields/Loss_Description__c.field-meta.xml
<CustomField>
    <fullName>Loss_Description__c</fullName>
    <description>Longer form explanation of why we lost the deal. Loss Reason will be automatically derived from this explanation. Please be detailed as possible.</description>
    <inlineHelpText>Longer form explanation of why we lost the deal. Loss Reason will be automatically derived from this explanation. Please be detailed as possible.</inlineHelpText>
    <label>Loss Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>