force-app/main/default/objects/Opportunity/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>Quantifiable measures of value and how they would measure ElevenLabs success</description>
    <inlineHelpText>Quantifiable measures of value and how they would measure ElevenLabs success</inlineHelpText>
    <label>Metrics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>