force-app/main/default/objects/Opportunity/fields/Modified_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Contract_End_Date__c</fullName>
    <description>Updated Contract End Date (early termination or extension)</description>
    <inlineHelpText>Updated Contract End Date (early termination or extension)</inlineHelpText>
    <label>Modified Contract End Date</label>
    <type>Date</type>
</CustomField>