force-app/main/default/objects/Opportunity/fields/Monthly_Character_Quota__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Character_Quota__c</fullName>
    <label>Monthly Character Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>