force-app/main/default/objects/Opportunity/fields/NDA_complete__c.field-meta.xml
<CustomField>
    <fullName>NDA_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status of if we have an NDA complete and on file in Google Drive</description>
    <inlineHelpText>Status of if we have an NDA complete and on file in Google Drive</inlineHelpText>
    <label>NDA complete</label>
    <type>Checkbox</type>
</CustomField>