force-app/main/default/objects/Opportunity/fields/Next_Steps_2__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_2__c</fullName>
    <description>Internal note on what to do with the account next.</description>
    <inlineHelpText>Internal note on what to do with the account next.</inlineHelpText>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>