force-app/main/default/objects/Opportunity/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Next steps for this deal</description>
    <inlineHelpText>Next steps for this deal</inlineHelpText>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>