force-app/main/default/objects/Opportunity/fields/Non_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Revenue__c</fullName>
    <label>Non - Recurring Revenue</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>equals</operation>
        <value>Non - Recurring</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>