force-app/main/default/objects/Opportunity/fields/Original_Deal__c.field-meta.xml
<CustomField>
    <fullName>Original_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the original first deal for any derivative opportunities such as upsells and renewals in order to trace origin of the account.</description>
    <inlineHelpText>Denotes the original first deal for any derivative opportunities such as upsells and renewals in order to trace origin of the account.</inlineHelpText>
    <label>Original Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>