force-app/main/default/objects/Opportunity/fields/Outside_Counsel_Involved__c.field-meta.xml
<CustomField>
    <fullName>Outside_Counsel_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status if we have outside counsel involved in this deal</description>
    <inlineHelpText>Status if we have outside counsel involved in this deal</inlineHelpText>
    <label>Outside Counsel Involved</label>
    <type>Checkbox</type>
</CustomField>