force-app/main/default/objects/Opportunity/fields/Pricing_Sent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Sent_Timestamp__c</fullName>
    <description>When we sent the pricing</description>
    <inlineHelpText>When we sent the pricing</inlineHelpText>
    <label>Pricing Sent Timestamp</label>
    <type>DateTime</type>
</CustomField>