force-app/main/default/objects/Opportunity/fields/Product_Features_Needed__c.field-meta.xml
<CustomField>
    <fullName>Product_Features_Needed__c</fullName>
    <description>Features that would be used in this lead&apos;s application</description>
    <inlineHelpText>Features that would be used in this lead&apos;s application</inlineHelpText>
    <label>Product Features Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STS API</fullName>
            </value>
            <value>
                <fullName>Dictionary / Pronunciation</fullName>
            </value>
            <value>
                <fullName>Emphasis &amp; intonation</fullName>
            </value>
            <value>
                <fullName>Speech-to-Speech</fullName>
            </value>
            <value>
                <fullName>dubb</fullName>
            </value>
            <value>
                <fullName>Conversation-context link</fullName>
            </value>
            <value>
                <fullName>Emotional controllability</fullName>
            </value>
            <value>
                <fullName>Runtime generation</fullName>
            </value>
            <value>
                <fullName>Unity integration</fullName>
            </value>
            <value>
                <fullName>runt</fullName>
            </value>
            <value>
                <fullName>Additional voice design settings</fullName>
            </value>
            <value>
                <fullName>Priority queue</fullName>
            </value>
            <value>
                <fullName>Non-verbal sounds</fullName>
            </value>
            <value>
                <fullName>Sound FX</fullName>
            </value>
            <value>
                <fullName>Pacing control</fullName>
            </value>
            <value>
                <fullName>Realtime dubbing</fullName>
            </value>
            <value>
                <fullName>Command-line Interface</fullName>
            </value>
            <value>
                <fullName>Projections</fullName>
            </value>
            <value>
                <fullName>User management</fullName>
            </value>
            <value>
                <fullName>Webapp</fullName>
            </value>
            <value>
                <fullName>Volume controls</fullName>
            </value>
            <value>
                <fullName>On-device deployment</fullName>
            </value>
            <value>
                <fullName>Input streaming</fullName>
            </value>
            <value>
                <fullName>Pronunciation Dictionary</fullName>
            </value>
            <value>
                <fullName>Prompts</fullName>
            </value>
            <value>
                <fullName>Acronyms &amp; Capitalisation selection</fullName>
            </value>
            <value>
                <fullName>Text-to-Speech</fullName>
            </value>
            <value>
                <fullName>Custom cloud solution</fullName>
            </value>
            <value>
                <fullName>Professional voices</fullName>
            </value>
            <value>
                <fullName>Output file naming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>