force-app/main/default/objects/Opportunity/fields/Qualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Reason__c</fullName>
    <description>Notes from SDR&apos;s qualification process</description>
    <inlineHelpText>Notes from SDR&apos;s qualification process</inlineHelpText>
    <label>Qualification Reason</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>