force-app/main/default/objects/Opportunity/fields/Qualification_workflow__c.field-meta.xml
<CustomField>
    <fullName>Qualification_workflow__c</fullName>
    <description>Actions taken to qualify the lead into a Deal</description>
    <inlineHelpText>Actions taken to qualify the lead into a Deal</inlineHelpText>
    <label>Qualification workflow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>More info requested via email</fullName>
            </value>
            <value>
                <fullName>Sent to self-serve</fullName>
            </value>
            <value>
                <fullName>Already a customer</fullName>
            </value>
            <value>
                <fullName>Book call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>