force-app/main/default/objects/Opportunity/fields/Received_Grant__c.field-meta.xml
<CustomField>
    <fullName>Received_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the deal is from ElevenLabs Grants</description>
    <inlineHelpText>Whether the deal is from ElevenLabs Grants</inlineHelpText>
    <label>Received Grant</label>
    <type>Checkbox</type>
</CustomField>